create github pages

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h2 class="mbr-section-title h1"></h2>
                     
                 </div>                
-                <div class="col-sm-4 text-xs-right"><a class="btn btn-lg btn-danger" href="http://daribaev.github.oi/menu">Мәзір</a></div>
+                <div class="col-sm-4 text-xs-right"><a class="btn btn-lg btn-danger" href="http://daribaev.github.io/menu">Мәзір</a></div>
             </div>
         </div>
     </div>
